2001-08-06  Martin Baulig  <baulig@suse.de>

	* gnome-ditem.[ch]: Fix #includes for the new location.

	* Makefile.am: New file.
